# sala-management

./: Cargo.toml  SALAMNG.md
src/: database.rs  graphql.rs  handler.rs  main.rs
src/config/: database.rs
src/graphql/: mod.rs  mutation.rs  query.rs  root.rs
src/models/: attendent.rs  classroom.rs  lesson.rs  mod.rs  session.rs  user.rs
src/utils/: handler.rs  message.rs
