[package]
name = "sala-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2"
serde ={version= "1", feature=["derive"]}
bson = "2.3.0"
futures = "0.3.5"
dotenv = "0.15.0"
listenfd ="1.0.0"
actix-cors = "0.6.1"
