[package]
name = "sala-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Server
actix-web = "4"
actix-cors = "0.6.1"
actix-rt = "2.7.0"
actix-web-lab = "0.16"
# Database
mongodb = "2"
serde ={version= "1.0.139", feature=["derive"]}
bson = "2.3.0"
futures = "0.3.5"

# Securtiy
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
bcrypt = "0.13.0"

# Dev
listenfd ="1.0.0"

#Style
colored ="2"

#GraphQL
async-graphql = "4.0.4"
async-graphql-actix-web = "4.0.4"